# platform.adaptation.libtdm-drm

./: configure.ac
packaging/: libtdm-drm.spec
src/: Makefile.am  tdm_drm.c  tdm_drm.h  tdm_drm_display.c  tdm_drm_format.c  tdm_drm_pp.c  tdm_drm_pp.h  tdm_fbdev.c  tdm_fbdev.h  tdm_fbdev_display.c
